[package]
name = "czaa"
version = "0.1.0"
authors = ["Rüdiger Klaehn <rklaehn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.5.1+zstd.1.4.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_cbor = { version = "0.11.1", features = ["tags"] }

multihash = "0.11.1"
cid = "0.5.0"

futures = "0.3.5"
tracing = "0.1.13"
lru = "0.4.3"
maplit = "1.0.2"
derive_more = "0.99.5"
anyhow = "1.0.31"

[dev-dependencies]
quickcheck = "0.9.2"
hex = "0.4.2"
tokio = { version = "0.2.20", features = ["full"] }
reqwest = { version = "0.10.4", features = ["json"] }
clap = "2.33.1"
