# Only have one member per line and the opening and ending on separate lines,
# since this is used in build scripts to populate the docker image cache!
[workspace]
members = [
  "banyan",
  "banyan-cli",
]

[profile.release]
debug = true

[patch.crates-io]
#ipfs-sqlite-block-store = { path = "../ipfs-sqlite-block-store" }
ipfs-sqlite-block-store = { git = "https://github.com/Actyx/ipfs-sqlite-block-store", branch = "ow/bundle-sqlite" }
