[package]
name = "banyan-cli"
version = "0.1.0"
authors = ["Rüdiger Klaehn <rklaehn@gmail.com>"]
edition = "2018"

[dependencies]
banyan = { path = "../banyan" }
zstd = "0.5.1+zstd.1.4.4"
serde = { version = "1.0.106", features = ["derive", "rc"] }
serde_cbor = { version = "0.11.1", features = ["tags"] }

futures = "0.3.5"
tracing = "0.1.13"
lru = "0.4.3"
maplit = "1.0.2"
derive_more = "0.99.5"
anyhow = "1.0.31"
bitvec = "0.17.4"
salsa20 = "0.5.2"
rand = "0.7.3"
multihash = "0.11.1"
cid = "0.5.0"

hex = "0.4.2"
tokio = { version = "0.2.20", features = ["full"] }
reqwest = { version = "0.10.4", features = ["json", "stream"] }
clap = "2.33.1"
tracing-subscriber = "0.2.5"
env_logger = "0.7.1"
percent-encoding = "2.1.0"
base64 = "0.12.3"
serde_json = "1.0.57"