[package]
name = "banyan-cli"
version = "0.1.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "Actyx AG"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["database", "immutable", "persistent", "tree"]
categories = ["data-structures"]

[dependencies]
anyhow = "1.0.38"
banyan = { path = "../banyan" }
base64 = "0.13.0"
derive_more = "0.99.11"
dot = "0.1.4"
env_logger = "0.8.2"
futures = "0.3.12"
hex = "0.4.2"
ipfs-sqlite-block-store = "0.2.2"
libipld = { version = "0.11.0", features = ["unleashed"] }
lru = "0.6.4"
maplit = "1.0.2"
multihash = "0.13.2"
percent-encoding = "2.1.0"
rand = "0.8.3"
reduce = "0.1.4"
reqwest = { version = "0.11.0", default-features = false, features = ["blocking", "json", "multipart", "rustls", "stream"] }
salsa20 = "0.7.2"
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_json = "1.0.62"
smol_str = { version = "0.1.17", features = ["serde"] }
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["full"] }
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
vec-collections = "0.3.5"
zstd = "0.6.0"

[dev-dependencies]
quickcheck = "1.0.3"

[target.'cfg(target_env = "musl")'.dependencies.jemallocator]
version = "0.3.2"
