[package]
name = "banyan-utils"
version = "0.6.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "Actyx AG"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["database", "immutable", "persistent", "tree"]
categories = ["data-structures"]
description = "Utilities to work with banyan trees"
repository = "https://github.com/Actyx/banyan"

[lib]
crate-type = ["lib"]

[[bin]]
name = "banyan-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0.40"
banyan = { version = "0.13.0-rc.2", path = "../banyan" }
base64 = "0.13.0"
chacha20 = "0.7.1"
derive_more = "0.99.13"
dot = "0.1.4"
env_logger = "0.8.3"
futures = "0.3.14"
hex = "0.4.3"
ipfs-sqlite-block-store = "0.5.0"
libipld = { version = "0.11.0", features = ["unleashed"] }
lru = "0.6.5"
maplit = "1.0.2"
multihash = "0.13.2"
parking_lot = "0.11.1"
percent-encoding = "2.1.0"
rand = "0.8.3"
reduce = "0.1.4"
reqwest = { version = "0.11.3", default-features = false, features = ["blocking", "json", "multipart", "rustls", "stream"] }
serde = { version = "1.0.125", features = ["derive", "rc"] }
serde_json = "1.0.64"
smol_str = { version = "0.1.17", features = ["serde"] }
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
vec-collections = "0.3.5"
zstd = "0.7.0"

[dev-dependencies]
quickcheck = "1.0.3"

[target.'cfg(target_env = "musl")'.dependencies]
jemallocator = "0.3.2"
