[package]
name = "banyan-utils"
version = "0.11.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "Actyx AG"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["database", "immutable", "persistent", "tree"]
categories = ["data-structures"]
description = "Utilities to work with banyan trees"
repository = "https://github.com/Actyx/banyan"

[lib]
crate-type = ["lib"]

[[bin]]
name = "banyan-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0.52"
banyan = { version = "0.18.0", path = "../banyan" }
base64 = "0.13.0"
cbor-data = "0.8"
chacha20 = "0.8.1"
derive_more = "0.99.17"
dot = "0.1.4"
env_logger = "0.9.0"
futures = "0.3.19"
hex = "0.4.3"
ipfs-sqlite-block-store = "0.13.0"
libipld = "0.14.0"
lru = "0.7.2"
maplit = "1.0.2"
multihash = "0.16.3"
parking_lot = "0.12.1"
percent-encoding = "2.1.0"
rand = "0.8.4"
reduce = "0.1.4"
reqwest = { version = "0.11.8", default-features = false, features = ["blocking", "json", "multipart", "rustls", "stream"] }
serde = { version = "1.0.133", features = ["derive", "rc"] }
serde_json = "1.0.74"
smol_str = { version = "0.1.21", features = ["serde"] }
structopt = "0.3.25"
thiserror = "1"
tokio = { version = "1.15.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
vec-collections = "0.3.5"
zstd = "0.9.2"

[dev-dependencies]
quickcheck = "1.0.3"

[target.'cfg(target_env = "musl")'.dependencies]
jemallocator = "0.3.2"
