[package]
name = "banyan"
version = "0.15.0"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>", "Actyx AG"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["database", "immutable", "persistent", "tree"]
categories = ["data-structures"]
description = "Persistent indexable tree data structure"
repository = "https://github.com/actyx/banyan/"

[dependencies]
anyhow = "1.0.40"
chacha20 = "0.7.1"
derive_more = "0.99.13"
fnv = "1.0.7"
futures = { version = "0.3.14", features = ["thread-pool"] }
lazy_static = "1.4.0"
libipld = { version = "0.12.0", features = ["unleashed"] }
maplit = "1.0.2"
parking_lot = "0.11.1"
prometheus = "0.12.0"
smallvec = "1.6.1"
tracing = "0.1.25"
weight-cache = "0.2.3"
# the only experimental feature we are using is ZSTD_decompressBound,
# which is not actually experimental according to the zstd C docs.
zstd = { version = "0.9.0", features = ["experimental"] }

[dev-dependencies]
clap = "2.33.3"
env_logger = "0.8.3"
generic-array = "0.14.4"
hex = "0.4.3"
multihash = "0.14.0"
quickcheck = "1.0.3"
quickcheck_async = "0.1.1"
quickcheck_macros = "1.0.0"
rand_chacha = "0.3.0"
sha2 = "0.9.3"
tokio = { version = "1.5.0", features = ["full"] }
tracing-subscriber = "0.2.19"
rand = "0.8.3"
range-collections = "0.1.1"
